# HW_WEB4

./: Dockerfile  README.md  Web_app_log.txt  contact.html  error.html  index.html  main.py  message.html  pyproject.toml
storage/: data.ison  data.json
templates/: blog.json
