[tool.poetry]
name = "hw-web4"
version = "0.1.0"
description = "Home_work_web_4"
authors = ["Denko <officedenko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
